RESOLVED FIXED 272151
[Skia] Global alpha is not handled when drawing an image or filling with a pattern
https://bugs.webkit.org/show_bug.cgi?id=272151
Summary [Skia] Global alpha is not handled when drawing an image or filling with a pa...
Carlos Garcia Campos
Reported 2024-04-04 05:18:59 PDT
.
Attachments
Carlos Garcia Campos
Comment 1 2024-04-04 05:23:23 PDT
EWS
Comment 2 2024-04-05 01:49:09 PDT
Committed 277106@main (15b647424382): <https://commits.webkit.org/277106@main> Reviewed commits have been landed. Closing PR #26842 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-05 01:50:13 PDT
Note You need to log in before you can comment on or make changes to this bug.