[Skia] Global alpha is not handled when drawing an image or filling with a pattern https://bugs.webkit.org/show_bug.cgi?id=272151

Reviewed by Alejandro G. Castro.

Set the global alpha when drawing images and filling with a pattern.
Also don't apply the alpha when setting the color of shadows, since it's
already taken from SkPaint global alpha or source color.

* Source/WebCore/platform/graphics/skia/GraphicsContextSkia.cpp:
(WebCore::GraphicsContextSkia::drawNativeImageInternal):
(WebCore::GraphicsContextSkia::createDropShadowFilterIfNeeded const):
(WebCore::GraphicsContextSkia::setupFillSource const):

Canonical link: https://commits.webkit.org/277106@main